--- a/login.html
+++ b/login.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Home</title>
-    <h1>Home</h1>
+    <h1>Project 3</h1>
+    <br>
+    <h1>Fifteen Puzzle</h1>
     <style>
         h1 {
     	  font-family: 'Baloo Bhai', cursive;
-    	  font-size: 8rem;
+    	  font-size: 4rem;
     	  text-shadow: 4px 4px 8px #000;
           text-align: center;
     	}
@@ -22,7 +24,7 @@
   display: inline-block;
   font-size: 16px;
   margin : 4px 4px;
-  margin-left: 550px;
+  margin-left: 650px;
   transition-duration: 0.4s;
   cursor: pointer;
 }
@@ -31,7 +33,12 @@
 </head>
 <body>
 <div class="play">
-    <button onclick="index.html">Let's Play </button>
+    <button onclick='location.href = "index.html"'>Let's Play </button>
+    
+</div>
+</body>
+</html>
+
     
 </div>
 </body>
