--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body onload="start()">
       <h2>The Puzzle of the Fifteen Tiles</h2>
-	  <h2> By: Amy Jun Anthony Finch Solumtochukwu Orji Manjinder Kaur
+	  <h2> By: Amy Jun, Anthony Finch, Solumtochukwu Orji, Manjinder Kaur
        </h2>
 	  <p> The object of this game is to arrange the tiles in order by numbers, row by row, with the bottom right corner having an empty tile.</p>
 	  <p> The Simple Game button gives you a game that is 1 tile from being solved, to demonstrate how the game is solved. </p>
