--- a/login.html
+++ b/login.html
@@ -20,13 +20,12 @@
   color: rgb(48, 22, 163);
   padding: 16px 32px;
   text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin : 4px 4px;
-  margin-left: 650px;
-  transition-duration: 0.4s;
-  cursor: pointer;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
     </style>
 
