--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <title>Fifteen-Puzzle</title>
 		<link rel = "stylesheet" type = "text/css" href ="15Styling.css">
-		<script src="FifteenJavaScript.js" type="text/javascript"></script>
+		<script src="FifteenJavaScript.JS" type="text/javascript"></script>
     </head>
 
     <body onload="start()">
